[package]
name = "gmail-desktop"
version = "1.0.0-beta.6"
description = "A Tauri desktop wrapper for Gmail"
authors = ["madratzz"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "gmail_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "unstable"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2.7"
